# CommonApi_SomeIp

./: CMakeLists.txt  README.md  build.sh
cgen/commonapi-generator/: artifacts.xml
cgen/commonapi-generator/configuration/: config.ini
cgen/commonapi-generator/configuration/org.eclipse.core.runtime/: .table.1
cgen/commonapi-generator/configuration/org.eclipse.osgi/: framework.info.1
cgen/commonapi-generator/configuration/org.eclipse.update/: platform.xml
cgen/commonapi-generator/features/org.genivi.commonapi.console.feature_3.1.12.v201705291619/: feature.xml
cgen/commonapi-generator/features/org.genivi.commonapi.console.franca.feature_3.1.12.v201705291619/: feature.xml
cgen/commonapi-generator/features/org.genivi.commonapi.core.cli.feature_3.1.12.v201705291619/: feature.xml
cgen/commonapi_core_generator/configuration/org.eclipse.core.runtime/: .table.1
cgen/commonapi_core_generator/configuration/org.eclipse.osgi/: framework.info.28
cgen/commonapi_someip_generator/configuration/org.eclipse.core.runtime/: .table.1
cgen/commonapi_someip_generator/configuration/org.eclipse.osgi/: framework.info.29
cgen/commonapi_someip_generatorasda/configuration/org.eclipse.core.runtime/: .table.1
cgen/commonapi_someip_generatorasda/configuration/org.eclipse.osgi/: framework.info.2
clientApplication/: CMakeLists.txt
clientApplication/src/: HelloWorldClient.cpp
serviceApplication/: CMakeLists.txt
serviceApplication/include/: HelloWorldStubImpl.hpp
serviceApplication/src/: HelloWorldService.cpp  HelloWorldStubImpl.cpp
(+23 files in other folders)
